--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,8 @@
     <div id="app">
       <p>Loading ...</p>
     </div>
-
+    
+    <script type="text/javascript" src="js/moment.js"></script>
     <script type="text/javascript" src="js/out/goog/base.js"></script>
     <script type="text/javascript" src="js/front.js"></script>
     <script type="text/javascript">goog.require('veye2.core')</script>
