added project upload;

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
     <title>VersionEye</title>
   </head>
   <body>
-    <div id="app">
+    <div id="app" style="height: 100vh;">
       <p>Loading ...</p>
     </div>
     
